force-app/main/default/objects/Investment_Area_Allocation__c/Investment_Area_Allocation__c.object-meta.xml
<CustomObject>
    <label>Investment Area Allocation</label>
    <nameField>
        <displayFormat>IAA-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Area Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>