force-app/main/default/objects/Investment_Area_Allocation__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <formula>text(Funding_Allocation__r.Financial_Year__c)</formula>
    <label>Financial Year</label>
    <type>Text</type>
</CustomField>