force-app/main/default/objects/Investment_Area_Allocation__c/fields/Funding_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Funding_Allocation__c</fullName>
    <label>Funding Allocation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Funding_Allocation__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Funding_Allocation__c</referenceTo>
    <relationshipLabel>Investment Area Allocations</relationshipLabel>
    <relationshipName>Investment_Area_Allocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>