force-app/main/default/objects/Investment_Area_Allocation__c/fields/Funding_Allocation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Allocation_Start_Date__c</fullName>
    <formula>Funding_Allocation__r.Funding_Allocation_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Allocation Start Date</label>
    <type>Date</type>
</CustomField>