force-app/main/default/objects/Investment_Area_Allocation__c/fields/Payments__c.field-meta.xml
<CustomField>
    <fullName>Payments__c</fullName>
    <description>Sum of payments excluding those with the status of cancelled.</description>
    <inlineHelpText>Sum of payments excluding those with the status of cancelled.</inlineHelpText>
    <label>Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>