force-app/main/default/objects/Investment_Area_Allocation__c/validationRules/Active_Investment_Area.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Investment_Area</fullName>
    <active>true</active>
    <errorConditionFormula>(isnew() || ischanged(Investment_Area__c)) &amp;&amp; not(ispickval(Investment_Area__r.Status__c,&quot;Active&quot;))</errorConditionFormula>
    <errorDisplayField>Investment_Area__c</errorDisplayField>
    <errorMessage>Allocations can only be made to &apos;Active&apos; Investment Areas</errorMessage>
</ValidationRule>