force-app/main/default/objects/Investment_Area_Allocation__c/validationRules/Allocation_greater_than_payments.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocation_greater_than_payments</fullName>
    <active>false</active>
    <description>This rule will restrict the user to edit allocated amount less than total payment</description>
    <errorConditionFormula>IF(AND(ISCHANGED(Amount__c),
Amount__c &gt;= Payments__c)
,true,false)</errorConditionFormula>
    <errorMessage>The Approved Amount cannot be less than the sum of existing Payments</errorMessage>
</ValidationRule>