force-app/main/default/objects/Investment_Area_Allocation__c/validationRules/Amount_Exceeds_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Exceeds_Available</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() &amp;&amp; Amount__c &gt;  Funding_Allocation__r.Available_to_Allocate__c)

||

(NOT(ISNEW()) &amp;&amp; 

Amount__c - priorvalue(Amount__c) &gt;  Funding_Allocation__r.Available_to_Allocate__c)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>The amount is more than what is available to allocate.</errorMessage>
</ValidationRule>