force-app/main/default/objects/Investment_Area_Allocation__c/validationRules/Approved_Funding_Allocation.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Funding_Allocation</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval(Status__c,&quot;Confirmed&quot;) &amp;&amp; not(ispickval(Funding_Allocation__r.Status__c,&quot;Confirmed&quot;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Investment Area Allocations can only be set to &apos;Confirmed&apos; when the Funding Allocation is &apos;Confirmed&apos;</errorMessage>
</ValidationRule>