force-app/main/default/objects/Investment_Area_Allocation__c/validationRules/Investment_Area.validationRule-meta.xml
<ValidationRule>
    <fullName>Investment_Area</fullName>
    <active>true</active>
    <errorConditionFormula>Investment_Area__r.Strategic_Area__c &lt;&gt; Funding_Allocation__r.Strategic_Area__c</errorConditionFormula>
    <errorDisplayField>Investment_Area__c</errorDisplayField>
    <errorMessage>The Investment Area must be within the same Strategic Area as the Funding Allocation.</errorMessage>
</ValidationRule>